Eliminada una query

--- a/app/bin/main/queries.properties
+++ b/app/bin/main/queries.properties
@@ -1,5 +1,6 @@
 # Queries para Login
 user.findByEmailAndPassword=SELECT * FROM Users WHERE email = ? AND password = SHA2(?, 256)
+user.findByIdAndPassword=SELECT * FROM Users WHERE id = ? AND password = SHA2(?, 256)
 
 
 # Queries para Usuarios
@@ -15,9 +16,8 @@ user.emailExists=SELECT id FROM Users WHERE email = ?
 # Queries para Juegos
 game.add=INSERT INTO Games (name, genre, price) VALUES (?, ?, ?)
 game.existsByName=SELECT 1 FROM Games WHERE name = ?
-game.findByName=SELECT id, name, genre, price FROM Games WHERE name = ?
+game.findGamesByName=SELECT id, name, genre, price FROM Games WHERE name LIKE ?
 game.addGame=INSERT INTO Games (name, genre, price) VALUES (?, ?, ?);
-game.updateGame=UPDATE Games SET name = ?, genre = ?, price = ? WHERE id = ?;
 game.deleteGame=DELETE FROM Games WHERE id = ?;
 game.getGameByName=SELECT id, name, genre, price FROM Games WHERE name = ?;
 game.findAll=SELECT id, name, genre, price FROM Games ORDER BY name ASC
