Terminando de pasar las vistas

--- a/app/src/main/resources/queries.properties
+++ b/app/src/main/resources/queries.properties
@@ -36,6 +36,10 @@ library.getGamesByGenreUser=SELECT g.id AS id, g.name, g.genre, g.price, lg.stat
 FROM LibraryGames lg \
 JOIN Games g ON lg.game_id = g.id \
 WHERE lg.user_id = ? AND g.genre LIKE ?
+library.getGamesByNameUser=SELECT g.id AS id, g.name, g.genre, g.price, lg.state, lg.game_score \
+FROM LibraryGames lg \
+JOIN Games g ON lg.game_id = g.id \
+WHERE lg.user_id = ? AND g.name LIKE ?
 library.addGame=INSERT INTO LibraryGames (library_id, user_id, game_id, state, game_score) VALUES (?, ?, ?, ?, ?);
 library.removeGame=DELETE FROM LibraryGames WHERE library_id = ? AND game_id = ?;
 library.updateGameState=UPDATE LibraryGames SET state = ? WHERE game_id = ? AND user_id = ?;
