Creo que ya se podría hacer api jejeje

--- a/app/src/main/resources/queries.properties
+++ b/app/src/main/resources/queries.properties
@@ -40,6 +40,10 @@ library.getGamesByNameUser=SELECT g.id AS id, g.name, g.genre, g.price, lg.state
 FROM LibraryGames lg \
 JOIN Games g ON lg.game_id = g.id \
 WHERE lg.user_id = ? AND g.name LIKE ?
+library.getGamesByGenreAndNameUser=SELECT g.id AS id, g.name, g.genre, g.price, lg.state, lg.game_score \
+FROM LibraryGames lg \
+JOIN Games g ON lg.game_id = g.id \
+WHERE lg.user_id = ? AND g.genre LIKE ? AND g.name LIKE ?
 library.addGame=INSERT INTO LibraryGames (library_id, user_id, game_id, state, game_score) VALUES (?, ?, ?, ?, ?);
 library.removeGame=DELETE FROM LibraryGames WHERE library_id = ? AND game_id = ?;
 library.updateGameState=UPDATE LibraryGames SET state = ? WHERE game_id = ? AND user_id = ?;
@@ -51,6 +55,7 @@ library.getGamesByGenre=SELECT id, name, genre, price FROM Games WHERE genre LIK
 # Queries para Amistades
 friendship.searchUsers=SELECT id, name, email, role FROM Users WHERE id = ?;
 friendship.getUserIdByUserEmail=SELECT id FROM Users WHERE email = ?;
+friendship.getUserEmailByUserId=SELECT email FROM Users WHERE id = ?;
 friendship.getFriends=SELECT u.id, u.name, u.email, u.role \
 FROM Friendships f \
 JOIN Users u ON (f.requester_id = u.id OR f.receiver_id = u.id) \
