Ya está todo el código limpio, falta añadir los endpoints para que sea una api y seguir desarrollando la aplicación, que lo siguiente después de lo de los endpoints intentare conectarme con la api de Steam a ver que tal

--- a/app/src/main/resources/queries.properties
+++ b/app/src/main/resources/queries.properties
@@ -3,7 +3,6 @@ user.findByEmailAndPassword=SELECT * FROM Users WHERE email = ? AND password = S
 
 
 # Queries para Usuarios
-user.findById=SELECT id, name, email, role, password FROM Users WHERE id = ?
 user.findAll=SELECT * FROM Users
 user.insert=INSERT INTO Users (name, email, password, role) VALUES (?, ?, SHA2(?, 256), ?)
 user.delete=DELETE FROM Users WHERE id = ?
@@ -18,6 +17,7 @@ game.existsByName=SELECT 1 FROM Games WHERE name = ?
 game.addGame=INSERT INTO Games (name, genre, price) VALUES (?, ?, ?);
 game.deleteGame=DELETE FROM Games WHERE id = ?;
 game.getGameByName=SELECT id, name, genre, price FROM Games WHERE name = ?;
+game.getGameByGameId=SELECT id, name, genre, price FROM Games WHERE id = ?;
 game.findAll=SELECT id, name, genre, price FROM Games ORDER BY name ASC
 
 
@@ -56,6 +56,7 @@ friendship.getFriends=SELECT u.id, u.name, u.email, u.role \
 FROM Friendships f \
 JOIN Users u ON (f.requester_id = u.id OR f.receiver_id = u.id) \
 WHERE (f.requester_id = ? OR f.receiver_id = ?) AND f.status = 'Accepted' AND u.id != ?;
+friendship.getFriendshipById=SELECT id, requester_id, receiver_id, status FROM Friendships WHERE id = ?;
 friendship.sendRequest=INSERT INTO Friendships (requester_id, receiver_id, status) VALUES (?, ?, ?);
 friendship.getRequests=SELECT id, requester_id, receiver_id, status FROM Friendships WHERE receiver_id = ? AND status = 'Pending';
 friendship.updateStatus=UPDATE Friendships SET status = ? WHERE id = ?;
