Intento de integrar la api de steam

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     // Dependencias adicionales
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+    implementation 'org.json:json:20210307'
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
@@ -47,7 +49,7 @@ java {
 }
 
 application {
-    mainClass = 'com.gameaffinity.view.GameAffinityApplication'
+    mainClass = 'com.gameaffinity.GameAffinityApplication'
 }
 
 tasks.named('test') {
