Ya se puede obtener la puntuacion media de un juego

--- a/app/src/main/resources/queries.properties
+++ b/app/src/main/resources/queries.properties
@@ -12,7 +12,6 @@ user.emailExists=SELECT id FROM Users WHERE email = ?
 
 
 # Queries para Juegos
-game.add=INSERT INTO Games (name, genre, price) VALUES (?, ?, ?)
 game.existsByName=SELECT 1 FROM Games WHERE name = ?
 game.addGame=INSERT INTO Games (name, genre, price) VALUES (?, ?, ?);
 game.deleteGame=DELETE FROM Games WHERE id = ?;
@@ -23,7 +22,6 @@ game.findAll=SELECT id, name, genre, price FROM Games ORDER BY name ASC
 
 # Queries para Puntuaciones
 library.updateGameScore=UPDATE LibraryGames SET game_score = ? WHERE game_id = ? AND user_id = ? AND library_id = ?
-library.getGameScore=SELECT game_score FROM LibraryGames WHERE game_id = ? AND user_id = ? AND library_id = ?
 library.insert=INSERT INTO Libraries (user_id) VALUES (?);
 library.isGameInLibrary=SELECT 1 FROM LibraryGames WHERE library_id = ? AND game_id = ?;
 library.getGamesByUserId=SELECT g.id, g.name, g.genre, g.price, lg.state, lg.game_score \
@@ -47,6 +45,8 @@ library.removeGame=DELETE FROM LibraryGames WHERE library_id = ? AND game_id = ?
 library.updateGameState=UPDATE LibraryGames SET state = ? WHERE game_id = ? AND user_id = ?;
 library.getLibraryIdByUserId=SELECT id FROM Libraries WHERE user_id = ?;
 library.getAllGenres=SELECT DISTINCT genre FROM Games;
+library.getGameScore=SELECT game_score FROM LibraryGames WHERE game_id = ?
+
 
 
 # Queries para Amistades
