Ya funciona lo de los tokens

--- a/app/src/main/resources/queries.properties
+++ b/app/src/main/resources/queries.properties
@@ -1,7 +1,6 @@
 # Queries para Login
 user.findByEmailAndPassword=SELECT * FROM Users WHERE email = ? AND password = SHA2(?, 256)
-
-
+user.findByEmail=SELECT * FROM Users WHERE email = ?
 # Queries para Usuarios
 user.findAll=SELECT * FROM Users
 user.insert=INSERT INTO Users (name, email, password, role) VALUES (?, ?, SHA2(?, 256), ?)
@@ -9,8 +8,6 @@ user.delete=DELETE FROM Users WHERE id = ?
 user.updateProfile=UPDATE Users SET name = ?, email = ?, password = ? WHERE id = ?
 user.updateRole=UPDATE Users SET role = ? WHERE id = ?
 user.emailExists=SELECT id FROM Users WHERE email = ?
-
-
 # Queries para Juegos
 game.existsByName=SELECT 1 FROM Games WHERE name = ?
 game.addGame=INSERT INTO Games (name, genre, price) VALUES (?, ?, ?);
@@ -18,8 +15,6 @@ game.deleteGame=DELETE FROM Games WHERE id = ?;
 game.getGameByName=SELECT id, name, genre, price FROM Games WHERE name = ?;
 game.getGameByGameId=SELECT id, name, genre, price FROM Games WHERE id = ?;
 game.findAll=SELECT id, name, genre, price FROM Games ORDER BY name ASC
-
-
 # Queries para Puntuaciones
 library.updateGameScore=UPDATE LibraryGames SET game_score = ? WHERE game_id = ? AND user_id = ? AND library_id = ?
 library.insert=INSERT INTO Libraries (user_id) VALUES (?);
@@ -46,9 +41,6 @@ library.updateGameState=UPDATE LibraryGames SET state = ? WHERE game_id = ? AND 
 library.getLibraryIdByUserId=SELECT id FROM Libraries WHERE user_id = ?;
 library.getAllGenres=SELECT DISTINCT genre FROM Games;
 library.getGameScore=SELECT game_score FROM LibraryGames WHERE game_id = ?
-
-
-
 # Queries para Amistades
 friendship.getUserIdByUserEmail=SELECT id FROM Users WHERE email = ?;
 friendship.getUserEmailByUserId=SELECT email FROM Users WHERE id = ?;
@@ -66,6 +58,6 @@ AND status = 'Accepted'
 friendship.checkPendingRequest=SELECT 1 FROM Friendships WHERE \
 ((requester_id = ? AND receiver_id = ?) OR (requester_id = ? AND receiver_id = ?)) \
 AND status = 'Pending'
-friendship.deleteFriend = DELETE FROM Friendships \
+friendship.deleteFriend=DELETE FROM Friendships \
 WHERE (requester_id = ? AND receiver_id = ?) \
 OR (requester_id = ? AND receiver_id = ?);
