Intentando añadir fotos de los videojuegos

--- a/app/src/main/resources/queries.properties
+++ b/app/src/main/resources/queries.properties
@@ -14,24 +14,24 @@ game.addGame=INSERT INTO Games (name, genre, price) VALUES (?, ?, ?);
 game.deleteGame=DELETE FROM Games WHERE id = ?;
 game.getGameByName=SELECT id, name, genre, price FROM Games WHERE name = ?;
 game.getGameByGameId=SELECT id, name, genre, price FROM Games WHERE id = ?;
-game.findAll=SELECT id, name, genre, price FROM Games ORDER BY name ASC
+game.findAll=SELECT id, name, genre, price, image_url FROM Games ORDER BY name ASC
 # Queries para Puntuaciones
 library.updateGameScore=UPDATE LibraryGames SET game_score = ? WHERE game_id = ? AND user_id = ? AND library_id = ?
 library.insert=INSERT INTO Libraries (user_id) VALUES (?);
 library.isGameInLibrary=SELECT 1 FROM LibraryGames WHERE library_id = ? AND game_id = ?;
-library.getGamesByUserId=SELECT g.id, g.name, g.genre, g.price, lg.state, lg.game_score \
+library.getGamesByUserId=SELECT g.id, g.name, g.genre, g.price, g.image_url, lg.state, lg.game_score \
 FROM LibraryGames lg \
 JOIN Games g ON lg.game_id = g.id \
 WHERE lg.library_id = (SELECT id FROM Libraries WHERE user_id = ?);
-library.getGamesByGenreUser=SELECT g.id AS id, g.name, g.genre, g.price, lg.state, lg.game_score \
+library.getGamesByGenreUser=SELECT g.id AS id, g.name, g.genre, g.price, g.image_url, lg.state, lg.game_score \
 FROM LibraryGames lg \
 JOIN Games g ON lg.game_id = g.id \
 WHERE lg.user_id = ? AND g.genre LIKE ?
-library.getGamesByNameUser=SELECT g.id AS id, g.name, g.genre, g.price, lg.state, lg.game_score \
+library.getGamesByNameUser=SELECT g.id AS id, g.name, g.genre, g.price, g.image_url, lg.state, lg.game_score \
 FROM LibraryGames lg \
 JOIN Games g ON lg.game_id = g.id \
 WHERE lg.user_id = ? AND g.name LIKE ?
-library.getGamesByGenreAndNameUser=SELECT g.id AS id, g.name, g.genre, g.price, lg.state, lg.game_score \
+library.getGamesByGenreAndNameUser=SELECT g.id AS id, g.name, g.genre, g.price, g.image_url, lg.state, lg.game_score \
 FROM LibraryGames lg \
 JOIN Games g ON lg.game_id = g.id \
 WHERE lg.user_id = ? AND g.genre LIKE ? AND g.name LIKE ?
