Ya funciona lo de las fotos, hacer lo que tiene la etiqueta de TODO

--- a/app/src/main/resources/queries.properties
+++ b/app/src/main/resources/queries.properties
@@ -14,6 +14,9 @@ game.addGame=INSERT INTO Games (name, genre, price) VALUES (?, ?, ?);
 game.deleteGame=DELETE FROM Games WHERE id = ?;
 game.getGameByName=SELECT id, name, genre, price FROM Games WHERE name = ?;
 game.getGameByGameId=SELECT id, name, genre, price FROM Games WHERE id = ?;
+game.getGamesByName=SELECT id, name, genre, price, image_url FROM Games WHERE name LIKE ?
+game.getGamesByGenre=SELECT id, name, genre, price, image_url FROM Games WHERE genre LIKE ?
+game.getGamesByGenreAndName=SELECT id, name, genre, price, image_url FROM Games WHERE genre LIKE ? AND name LIKE ?
 game.findAll=SELECT id, name, genre, price, image_url FROM Games ORDER BY name ASC
 # Queries para Puntuaciones
 library.updateGameScore=UPDATE LibraryGames SET game_score = ? WHERE game_id = ? AND user_id = ? AND library_id = ?
