Añadida descripcion para los juegos, reseñas de cada usuario, tiempo de juego de cada usuario y tiempo de juego medio

--- a/app/src/main/resources/queries.properties
+++ b/app/src/main/resources/queries.properties
@@ -14,27 +14,27 @@ game.addGame=INSERT INTO Games (name, genre, price) VALUES (?, ?, ?);
 game.deleteGame=DELETE FROM Games WHERE id = ?;
 game.getGameByName=SELECT id, name, genre, price FROM Games WHERE name = ?;
 game.getGameByGameId=SELECT id, name, genre, price FROM Games WHERE id = ?;
-game.getGamesByName=SELECT id, name, genre, price, image_url FROM Games WHERE name LIKE ?
-game.getGamesByGenre=SELECT id, name, genre, price, image_url FROM Games WHERE genre LIKE ?
-game.getGamesByGenreAndName=SELECT id, name, genre, price, image_url FROM Games WHERE genre LIKE ? AND name LIKE ?
-game.findAll=SELECT id, name, genre, price, image_url FROM Games ORDER BY name ASC
+game.getGamesByName=SELECT id, name, genre, price, description, image_url FROM Games WHERE name LIKE ?
+game.getGamesByGenre=SELECT id, name, genre, price, description, image_url FROM Games WHERE genre LIKE ?
+game.getGamesByGenreAndName=SELECT id, name, genre, price, description, image_url FROM Games WHERE genre LIKE ? AND name LIKE ?
+game.findAll=SELECT id, name, genre, price, description, image_url FROM Games ORDER BY name ASC
 # Queries para Puntuaciones
 library.updateGameScore=UPDATE LibraryGames SET game_score = ? WHERE game_id = ? AND user_id = ? AND library_id = ?
 library.insert=INSERT INTO Libraries (user_id) VALUES (?);
 library.isGameInLibrary=SELECT 1 FROM LibraryGames WHERE library_id = ? AND game_id = ?;
-library.getGamesByUserId=SELECT g.id, g.name, g.genre, g.price, g.image_url, lg.state, lg.game_score \
+library.getGamesByUserId=SELECT g.id, g.name, g.genre, g.price, g.description, g.image_url, lg.state, lg.game_score, lg.review, lg.time_played \
 FROM LibraryGames lg \
 JOIN Games g ON lg.game_id = g.id \
 WHERE lg.library_id = (SELECT id FROM Libraries WHERE user_id = ?);
-library.getGamesByGenreUser=SELECT g.id AS id, g.name, g.genre, g.price, g.image_url, lg.state, lg.game_score \
+library.getGamesByGenreUser=SELECT g.id AS id, g.name, g.genre, g.price, g.description, g.image_url, lg.state, lg.game_score, lg.review, lg.time_played \
 FROM LibraryGames lg \
 JOIN Games g ON lg.game_id = g.id \
 WHERE lg.user_id = ? AND g.genre LIKE ?
-library.getGamesByNameUser=SELECT g.id AS id, g.name, g.genre, g.price, g.image_url, lg.state, lg.game_score \
+library.getGamesByNameUser=SELECT g.id AS id, g.name, g.genre, g.price, g.description, g.image_url, lg.state, lg.game_score, lg.review, lg.time_played \
 FROM LibraryGames lg \
 JOIN Games g ON lg.game_id = g.id \
 WHERE lg.user_id = ? AND g.name LIKE ?
-library.getGamesByGenreAndNameUser=SELECT g.id AS id, g.name, g.genre, g.price, g.image_url, lg.state, lg.game_score \
+library.getGamesByGenreAndNameUser=SELECT g.id AS id, g.name, g.genre, g.price, g.description, g.image_url, lg.state, lg.game_score, lg.review, lg.time_played \
 FROM LibraryGames lg \
 JOIN Games g ON lg.game_id = g.id \
 WHERE lg.user_id = ? AND g.genre LIKE ? AND g.name LIKE ?
@@ -44,6 +44,9 @@ library.updateGameState=UPDATE LibraryGames SET state = ? WHERE game_id = ? AND 
 library.getLibraryIdByUserId=SELECT id FROM Libraries WHERE user_id = ?;
 library.getAllGenres=SELECT DISTINCT genre FROM Games;
 library.getGameScore=SELECT game_score FROM LibraryGames WHERE game_id = ?
+library.getTimePlayed=SELECT time_played FROM LibraryGames WHERE game_id = ?
+library.updateGameReview=UPDATE LibraryGames SET review = ? WHERE game_id = ? AND user_id = ? AND library_id = ?;
+library.updateTimePlayed=UPDATE LibraryGames SET time_played = ? WHERE game_id = ? AND user_id = ? AND library_id = ?;
 # Queries para Amistades
 friendship.getUserIdByUserEmail=SELECT id FROM Users WHERE email = ?;
 friendship.getUserEmailByUserId=SELECT email FROM Users WHERE id = ?;
