Ahora hay que añadir algun juego a la base de datos para probar a ver si funciona, porque todo lo demás si

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 # Inicialización de la base de datos
 spring.sql.init.mode=always
+server.port=8081
